tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/freshnessNeg.check
newSource:6: error: effect type mismatch;
 found   : @mod() @loc(any)
 required: @mod() @loc()
@loc(any) does not conform to @loc()
  def f1(): A1 @loc() = new A1
                        ^
newSource:15: error: effect type mismatch;
 found   : @mod() @loc(any)
 required: @mod() @loc()
@loc(any) does not conform to @loc()
  def f2a: A2 @loc() = new A2()
                       ^
newSource:24: error: effect type mismatch;
 found   : @mod(A3.this) @loc(any)
 required: @mod() @loc(any)
@mod(A3.this) does not conform to @mod()
      x = y
        ^
newSource:19: error: effect type mismatch;
 found   : @mod(A3.this) @loc()
 required: @mod() @loc(any)
@mod(A3.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A3 {
           ^
newSource:31: error: effect type mismatch;
 found   : @mod() @loc(any)
 required: @mod() @loc()
@loc(any) does not conform to @loc()
  def f4: A4 @loc() = new A4
                      ^
newSource:37: error: effect type mismatch;
 found   : @mod(A7.this) @loc(any)
 required: @mod() @loc(any)
@mod(A7.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
The mismatch is due to a statement in the class body.
    x = 1
      ^
newSource:34: error: effect type mismatch;
 found   : @mod(A7.this) @loc()
 required: @mod() @loc(any)
@mod(A7.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A7 {
           ^
newSource:40: error: effect type mismatch;
 found   : @mod(A8.this) @loc()
 required: @mod() @loc(any)
@mod(A8.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A8 {
           ^
newSource:51: error: effect type mismatch;
 found   : @mod(A9.this) @loc(any)
 required: @mod() @loc(any)
@mod(A9.this) does not conform to @mod()
      this.x = x
             ^
newSource:47: error: effect type mismatch;
 found   : @mod(A9.this) @loc()
 required: @mod() @loc(any)
@mod(A9.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A9 {
           ^
newSource:60: error: effect type mismatch;
 found   : @mod(A10.this) @loc(any)
 required: @mod(x$1$1) @assign(x$1$1,any) @loc(any)
@mod(A10.this) does not conform to @mod(x$1$1)
      b = x + y
        ^
newSource:56: error: effect type mismatch;
 found   : @mod(A10.this) @loc()
 required: @mod() @loc(any)
@mod(A10.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A10(a: Int) {
           ^
newSource:70: error: effect type mismatch;
 found   : @mod(d) @loc()
 required: @mod() @loc()
@mod(d) does not conform to @mod()
  def f12(d: D): A12a @mod() @loc() = new A12a(d)
                                      ^
newSource:71: error: effect type mismatch;
 found   : @mod(A12b.this,a) @loc()
 required: @mod() @loc(any)
@mod(A12b.this,a) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A12b(@local a: D) {
            ^
newSource:91: error: effect type mismatch;
 found   : @mod(A13.this) @loc(any)
 required: @mod() @loc(any)
@mod(A13.this) does not conform to @mod()
      c = k
        ^
newSource:79: error: effect type mismatch;
 found   : @mod(A13.this) @loc()
 required: @mod() @loc(any)
@mod(A13.this) does not conform to @mod()
The effect of the primary constructor does not match the annotated effect.
  class A13 {
            ^
